feat: Modify scrolling navbar^C

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 </head>
 <body>
     <div class="navbar">
@@ -22,14 +22,14 @@
     <section class="greeting">
         <article class="greeting__text">
             <img class="greeting__nav navigation" src="images/nav1.png" alt="navigation">
-            <h1 data-aos="flip-up" class="greeting__header header"><span class="greeting__name">MARTA</span> BIELAN</h1>
+            <h1 class="greeting__header header"><span class="greeting__name">MARTA</span> BIELAN</h1>
             <p class="greeting__paragraph paragraph">Witam Państwa na stronie mojej kancelarii adwokackiej. Dokładam starań, aby zapewnić swoim klientom obsługę prawną na jak najwyższym poziomie i dać im poczucie,  że potencjał tkwiący w sprawie, z którą zwracają się do mnie o pomoc, został wykorzystany w 100 procentach. Zachęcam do przyjrzenia się bliżej ofercie i profilowi kancelarii.</p>
         </article>
     </section>
     <section class="introduction">
         <article class="introduction__text">
             <img class="introduction__nav navigation" src="images/introductionNav.png" alt="navigation">
-            <h1 data-aos="flip-up" class="introduction__header header">O MNIE</h1>
+            <h1 class="introduction__header header">O MNIE</h1>
             <p class="introduction__paragraph paragraph">Nazywam się Marta Bielan, jestem adwokatem i członkiem Okręgowej Rady Adwokackiej w Poznaniu. Ukończyłam studia prawnicze na Uniwersytecie Adama Mickiewicza w Poznaniu, podczas których zdobywałam doświadczenie w poznańskich kancelariach adwokackich i radcowskich, a także angażowałam się w pracę przy ciekawych projektach organizacji pozarządowych. Po rozpoczęciu aplikacji adwokackiej pod patronatem adwokata Zbigniewa Kasei, moja aktywność życiowa i zawodowa przeniosła się do rodzinnego Kalisza, w którym to mieście obecnie, z powodzeniem, prowadzę własną kancelarię adwokacką. Moja Kancelaria Adwokacka ukierunkowana jest na kompleksowe świadczenie usług z różnych dziedzin prawa adresowanych zarówno do przedsiębiorców jak i osób fizycznych.</p>
             <img class="introduction__image" src="images/courtroom.jpg" alt="point">
         </article>
@@ -128,7 +128,7 @@
             <p class="footer__text footer__text-right">Treść serwisu prawnie chroniona <span class="footer__name">Marta Bielan</span></p>
         </div>
     </footer>
-	<!-- <script src="script.js"></script> -->
+	<script src="script.js"></script>
     <script src="http://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="aos.js"></script>
     <script type="text/javascript">
