--- a/index.html
+++ b/index.html
@@ -93,21 +93,21 @@
                 <h1 class="contact__header header">KONTAKT</h1>
                 <ul class="contact__content">
                     <li data-aos="fade-left" class="contact__box">
-                        <img class="contact__icon contact__envelope" src="images/email.png" alt="envelope">
+                        <img class="contact__icon contact__envelope" src="images/email1.png" alt="envelope">
                         <div class="contact__data">
                             <p class="contact__paragraph contact__paragraph-big">E-MAIL</p>
                             <a href="mailto:bielan.marta@gmail.com" class="contact__paragraph">bielan.marta@gmail.com</a>
                         </div>
                     </li>
                     <li data-aos="fade-right" class="contact__box">
-                        <img class="contact__icon contact__point" src="images/address.png" alt="point">
+                        <img class="contact__icon contact__point" src="images/address1.png" alt="point">
                         <div class="contact__data">
                             <p class="contact__paragraph contact__paragraph-big">ADRES</p>
                             <p class="contact__paragraph">Św. Stanisława 9/12</br>62-800 Kalisz</p>
                         </div>
                     </li>
                     <li data-aos="fade-left" class="contact__box">
-                        <img class="contact__icon contact__phone" src="images/phone.png" alt="phone">
+                        <img class="contact__icon contact__phone" src="images/phone1.png" alt="phone">
                         <div class="contact__data">
                             <p class="contact__paragraph contact__paragraph-big">TELEFON</p>
                             <a href="tel:+48509897077" class="contact__paragraph">509 897 077</a>
