feat: Change nav in first section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img class="introduction__nav navigation" src="images/introductionNav.png" alt="navigation">
             <h1 class="introduction__header header">O MNIE</h1>
             <p class="introduction__paragraph paragraph">Nazywam się Marta Bielan, jestem adwokatem i członkiem Okręgowej Rady Adwokackiej w Poznaniu. Ukończyłam studia prawnicze na Uniwersytecie Adama Mickiewicza w Poznaniu, podczas których zdobywałam doświadczenie w poznańskich kancelariach adwokackich i radcowskich, a także angażowałam się w pracę przy ciekawych projektach organizacji pozarządowych. Po rozpoczęciu aplikacji adwokackiej pod patronatem adwokata Zbigniewa Kasei, moja aktywność życiowa i zawodowa przeniosła się do rodzinnego Kalisza, w którym to mieście obecnie, z powodzeniem, prowadzę własną kancelarię adwokacką. Moja Kancelaria Adwokacka ukierunkowana jest na kompleksowe świadczenie usług z różnych dziedzin prawa adresowanych zarówno do przedsiębiorców jak i osób fizycznych.</p>
-            <img class="introduction__image" src="images/courtroom.jpg" alt="point">
+            <img data-aos="fade-left" class="introduction__image" src="images/courtroom.jpg" alt="point">
         </article>
     </section>
     <section class="fields">
