feat: add 4K and 2K version

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Bielan KANCELARIA ADWOKACKA</title>
     <link rel="stylesheet" type="text/css" href="main.css">
-    <link rel="stylesheet" type="text/css" href="responsive.css">
     <link rel="stylesheet" type="text/css" href="normalize.css">
+    <link rel="stylesheet" type="text/css" href="responsive.css">
     <link rel="stylesheet" type="text/css" href="aos.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -19,14 +19,14 @@
         <a href="tel:+48509897077" class="navbar__phonePopup"></a>
     </div>
     <section class="greeting">
-        <article class="greeting__text">
+        <article class="greeting__container">
             <img class="greeting__nav navigation" src="images/nav1.png" alt="navigation">
             <h1 class="greeting__header header"><span class="greeting__name">MARTA</span> BIELAN</h1>
             <p class="greeting__paragraph paragraph">Witam Państwa na stronie mojej kancelarii adwokackiej. Dokładam starań, aby zapewnić swoim klientom obsługę prawną na jak najwyższym poziomie i dać im poczucie,  że potencjał tkwiący w sprawie, z którą zwracają się do mnie o pomoc, został wykorzystany w 100 procentach. Zachęcam do przyjrzenia się bliżej ofercie i profilowi kancelarii.</p>
         </article>
     </section>
     <section class="introduction">
-        <article class="introduction__text">
+        <article class="introduction__container">
             <img class="introduction__nav navigation" src="images/introductionNav.png" alt="navigation">
             <h1 class="introduction__header header">O MNIE</h1>
             <p class="introduction__paragraph paragraph">Nazywam się Marta Bielan, jestem adwokatem i członkiem Okręgowej Rady Adwokackiej w Poznaniu. Ukończyłam studia prawnicze na Uniwersytecie Adama Mickiewicza w Poznaniu, podczas których zdobywałam doświadczenie w poznańskich kancelariach adwokackich i radcowskich, a także angażowałam się w pracę przy ciekawych projektach organizacji pozarządowych. Po rozpoczęciu aplikacji adwokackiej pod patronatem adwokata Zbigniewa Kasei, moja aktywność życiowa i zawodowa przeniosła się do rodzinnego Kalisza, w którym to mieście obecnie, z powodzeniem, prowadzę własną kancelarię adwokacką. Moja Kancelaria Adwokacka ukierunkowana jest na kompleksowe świadczenie usług z różnych dziedzin prawa adresowanych zarówno do przedsiębiorców jak i osób fizycznych.</p>
@@ -87,9 +87,9 @@
             </div>            
     </section>
     <section class="contact">
-        <div class="contact__text">
+        <div class="contact__container">
                 <img class="contact__nav navigation" src="images/contactNav.png" alt="navigation">
-            <div class="contact__container">
+            <div class="contact__text">
                 <h1 class="contact__header header">KONTAKT</h1>
                 <ul class="contact__content">
                     <li data-aos="fade-left" class="contact__box">
@@ -121,13 +121,12 @@
         </div>            
     </section>
     <footer class="footer">
-        <div class="footer__content">
+        <div class="footer__container">
             <p class="footer__text footer__text-left">© 2019 MARTA BIELAN</p>
             <img class="footer__logo" src="images/footerLogo.png" alt="logo">
             <p class="footer__text footer__text-right">Treść serwisu prawnie chroniona <span class="footer__name">Marta Bielan</span></p>
         </div>
     </footer>
-	<script src="script.js"></script>
     <script src="http://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="aos.js"></script>
     <script type="text/javascript">
